# CallSwiftFuncFromC

./: Podfile
Supporting Files/: Hello.txt
callSwiftFormCPP/: AppDelegate.swift  Asset.swift  ViewController.swift  testCall.swift
callSwiftFormCPP.xcodeproj/: project.pbxproj
callSwiftFormCPP.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
callSwiftFormCPP.xcodeproj/project.xcworkspace/xcuserdata/hotnow.xcuserdatad/: UserInterfaceState.xcuserstate
callSwiftFormCPP.xcodeproj/xcshareddata/xcschemes/: callSwiftFormCPP.xcscheme
callSwiftFormCPP.xcodeproj/xcuserdata/hotnow.xcuserdatad/xcschemes/: xcschememanagement.plist
callSwiftFormCPP.xcworkspace/: contents.xcworkspacedata
callSwiftFormCPP.xcworkspace/xcuserdata/hotnow.xcuserdatad/: UserInterfaceState.xcuserstate
callSwiftFormCPP.xcworkspace/xcuserdata/hotnow.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
callSwiftFormCPP/Base.lproj/: Main.storyboard
callSwiftFormCPP/cpp/: CppAPI-Bridging-Header.h  CppClass.h  caller.cpp  caller.mm
fost/: CMakeCache.txt
pack-of-fost/cpp/fost/: CMakeCache.txt  cmake_install.cmake
pack-of-fost/cpp/fost/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
pack-of-fost/cpp/fost/boost/: cmake_install.cmake
pack-of-fost/cpp/fost/crypto/: cmake_install.cmake
pack-of-fost/cpp/fost/fost-swift/: cmake_install.cmake
pack-of-fost/cpp/fost/fost-swift/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
pack-of-fost/cpp/fost/fost-swift/fost-swift.xcodeproj/: project.pbxproj
pack-of-fost/cpp/fost/fost/aws/: cmake_install.cmake
pack-of-fost/cpp/fost/fost/aws/Cpp/: cmake_install.cmake
pack-of-fost/cpp/fost/fost/base/: cmake_install.cmake
pack-of-fost/cpp/fost/fost/base/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  install_postBuildPhase.makeMinSizeRel
pack-of-fost/cpp/fost/fost/beanbag/: cmake_install.cmake
pack-of-fost/cpp/fost/fost/cord/: cmake_install.cmake
pack-of-fost/cpp/fost/fost/internet/: cmake_install.cmake
pack-of-fost/cpp/fost/fost/json-schema/: cmake_install.cmake
pack-of-fost/cpp/fost/fost/threading/: CTestTestfile.cmake  cmake_install.cmake
pack-of-fost/cpp/fost/fost/web/: cmake_install.cmake
pack-of-fost/cpp/fost/mdca-platform/mdca-common/: cmake_install.cmake
pack-of-fost/cpp/fost/test-ios.xcodeproj/: project.pbxproj
pack-of-fost/cpp/src/: Asset.swift  CMakeLists.txt  native.mm
pack-of-fost/fost-android-ndk/fost/aws/: .travis.CMakeLists.txt  .travis.yml  ChangeLog
pack-of-fost/fost-android-ndk/fost/aws/Cpp/: CMakeLists.txt
pack-of-fost/fost-android-ndk/fost/aws/Cpp/fost-s3/: CMakeLists.txt  fost-aws.cpp  fost-aws.hpp  s3.cpp  s3authen-tests.cpp  s3authen.cpp
pack-of-fost/fost-android-ndk/fost/aws/Examples/: CMakeLists.txt
pack-of-fost/fost-android-ndk/fost/cord/: .travis.CMakeLists.txt  .travis.yml  CMakeLists.txt  ChangeLog  DESIGN.md  README.md  runtests
pack-of-fost/fost-android-ndk/fost/cord/include/f5/: control.hpp  memory.hpp  raise.hpp
pack-of-fost/fost-android-ndk/fost/cord/include/f5/cord/: iostream.hpp  lstring.hpp  tstring.hpp  unicode-core.hpp  unicode-encodings.hpp  unicode-iterators.hpp  unicode-string.hpp  unicode-view.hpp  unicode.hpp  unicode.md  vstring.hpp
pack-of-fost/fost-android-ndk/fost/cord/test/: CMakeLists.txt
pack-of-fost/fost-android-ndk/fost/cord/test/compile/: CMakeLists.txt  lstring-compare.cpp  lstring.cpp  memory.cpp  tstring.cpp  u8view.cpp  unicode.cpp
pack-of-fost/fost-android-ndk/fost/cord/test/fuzz/: CMakeLists.txt  u8loader.cpp
pack-of-fost/fost-android-ndk/fost/cord/test/headers/: CMakeLists.txt  iostream.cpp  lstring.cpp  tstring.cpp  unicode-core.cpp  unicode-encodings.cpp  unicode-iterators.cpp  unicode-string.cpp  unicode-view.cpp  unicode.cpp
pack-of-fost/fost-android-ndk/fost/cord/test/run/: CMakeLists.txt  assert.hpp  lstring-compare.cpp  lstring-std_string.cpp  memory.cpp  unicode-check_valid.cpp  unicode-encoding.cpp  unicode-string.cpp  unicode-view.cpp
pack-of-fost/fost-android-ndk/fost/internet/: .travis.CMakeLists.txt  .travis.yml  ChangeLog  README.md
pack-of-fost/fost-android-ndk/fost/internet/Cpp/: CMakeLists.txt
pack-of-fost/fost-android-ndk/fost/internet/Cpp/fost-hod/: CMakeLists.txt  connection.cpp  counters.cpp  hod.cpp  packet.cpp
pack-of-fost/fost-android-ndk/fost/internet/Cpp/fost-inet/: CMakeLists.txt  authentication-tests.cpp  connection.cpp  cookie.cpp  cookie.tests.cpp  email.cpp  fost-inet-test.hpp  fost-inet.cpp  fost-inet.hpp  headers-tests.cpp  headers.cpp  host-tests.cpp  host.cpp  http-tests.cpp  http.authentication.cpp  http.server.cpp  http.useragent.cpp  mime-binary_body-tests.cpp  mime-coercion.cpp  mime-mime_envelope-tests.cpp  mime-tests.cpp  mime.cpp  pop3.cpp  smtp-tests.cpp  smtp.cpp  url-query_string.cpp  url-tests.cpp  url.cpp
pack-of-fost/fost-android-ndk/fost/internet/Cpp/fost-inet-test/: CMakeLists.txt  configuration.cpp  connection-failures.cpp  data-transmission.cpp  fost-inet-test.hpp  host.cpp  pop3.cpp  smtp.cpp  user_agent.cpp
pack-of-fost/fost-android-ndk/fost/internet/Examples/: CMakeLists.txt  README.md
pack-of-fost/fost-swift/: CMakeLists.txt
pack-of-fost/fost-swift/include/fost/swift/: settings.hpp  websever.hpp
pack-of-fost/fost-swift/src/: settings.mm  webserver.mm
(+192 files in other folders)
