function(runtest name)
    add_executable(cord-run-test-${name} EXCLUDE_FROM_ALL ${name}.cpp)
    target_link_libraries(cord-run-test-${name} f5-cord)
    add_custom_command(TARGET cord-run-test-${name}
        POST_BUILD COMMAND cord-run-test-${name})
    add_dependencies(check cord-run-test-${name})
    add_test(NAME cord-run-test-${name}-test COMMAND cord-run-test-${name})
endfunction(runtest)

runtest(lstring-compare)
runtest(lstring-std_string)
runtest(memory)
runtest(unicode-check_valid)
runtest(unicode-encoding)
runtest(unicode-view)
runtest(unicode-string)
